RESOLVED FIXED165514
ASSERT crash while running media-source/mediasource-activesourcebuffers.html under Stress GC bot.
https://bugs.webkit.org/show_bug.cgi?id=165514
Summary ASSERT crash while running media-source/mediasource-activesourcebuffers.html ...
Jer Noble
Reported 2016-12-06 21:53:33 PST
ASSERT crash while running media-source/mediasource-activesourcebuffers.html under Stress GC bot.
Attachments
Patch (2.55 KB, patch)
2016-12-06 21:57 PST, Jer Noble
no flags
Jer Noble
Comment 1 2016-12-06 21:57:32 PST
Jer Noble
Comment 2 2016-12-06 21:58:00 PST
WebKit Commit Bot
Comment 3 2016-12-07 12:33:07 PST
Comment on attachment 296375 [details] Patch Clearing flags on attachment: 296375 Committed r209469: <http://trac.webkit.org/changeset/209469>
WebKit Commit Bot
Comment 4 2016-12-07 12:33:11 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.